目标分割代码补全，修复视频显示和结果显示为单线程的bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ find_package(Qt6
         Network
         Multimedia
         MultimediaWidgets
+        Svg
         REQUIRED
 )
 
@@ -93,6 +94,7 @@ target_link_libraries(WIFI_Qt
         Qt::Network
         Qt::Multimedia
         Qt::MultimediaWidgets
+        Qt::Svg
         ncnn
         ${OpenCV_LIBS}
         libmysql
